<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/spacing_4x"
    >

        <TextView
            android:id="@+id/textViewSorting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/holoBlue"
            android:text="@string/sorting"
            android:textSize="@dimen/text_5x"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/textviewCancel"
            />

    <TextView
        android:id="@+id/textviewCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@color/holoBlue"
        android:textSize="@dimen/text_5x"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/spacing_4x"
        android:gravity="end"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_marginTop="@dimen/spacing_6x"
        app:layout_constraintTop_toBottomOf="@id/textviewCancel">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textviewCancel">



            <LinearLayout
                android:id="@+id/sortTypeLinLay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <CheckBox
                    android:id="@+id/checkboxSortByName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_6x"
                    android:layout_marginTop="@dimen/spacing_4x"
                    android:paddingStart="@dimen/spacing_base"
                    android:paddingEnd="@dimen/spacing_base"
                    style="@style/CustomCheckbox"
                    android:text="@string/sort_by_name"
                    android:textSize="@dimen/text_3x"
                    android:textStyle="normal" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/buttonSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/spacing_2x"
        android:backgroundTint="@color/holoBlue"
        android:text="@string/sort"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center" />
</androidx.constraintlayout.widget.ConstraintLayout>